about page pic stretch fix again

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -22,6 +22,7 @@
   display: flex;
   justify-content: center;
   max-width: 400px;
+  object-fit: cover;
 }
 
 @media (max-width: 550px) {
